--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">Michael's Team</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><img src="assets/img/portfolio/TITANS_.png"> Tech Titans</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -765,7 +765,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Michael's Team</h3>
+            <h3><img src="assets/img/portfolio/TITANS_.png">Tech Titans</h3>
             <p>
 
                
