--- a/inner-page.html
+++ b/inner-page.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Inner Page - Arsha Bootstrap Template</title>
+  <title>Terms Privacy</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">Michael's Team</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><img src="assets/img/portfolio/TITANS_.png"> Tech Titans</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -206,7 +206,7 @@ If you have any questions or concerns about this Policy or our privacy practices
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Michael's Team</h3>
+            <h3><img src="assets/img/portfolio/TITANS_.png"> Tech Titans</h3>
             <p>
 
                
