--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch" id="emaildivs">
             <form id="contactForm" role="form" >
               
              <marquee><img src="assets/img/portfolio/email2.jpg" class="emailpic" alt=""></marquee> 
