--- a/inner-page.html
+++ b/inner-page.html
@@ -206,7 +206,7 @@ If you have any questions or concerns about this Policy or our privacy practices
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3><img src="assets/img/portfolio/TITANS_.png"> Tech Titans</h3>
+            <h3 class="logo me-auto"><img src="assets/img/portfolio/TITANS_.png"> Tech Titans</h3>
             <p>
 
                
