--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3 class="logo me-auto"><img src="assets/img/portfolio/TITANS_.png">Tech Titans</h3>
+            <h3 class="logo me-auto"><img id="logoimg" src="assets/img/portfolio/TITANS_.png">Tech Titans</h3>
             <p>
 
                
